# RoadSense

./: .coverage  .flake8  .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  roadsense_adb_evaluation.html  roadsense_adb_scorecard.html  roadsense_environment.yml  roadsense_map_reference.html  run_pipeline.py
RoadSense/: .env.example  .gitignore  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
config/: mapillary_tags.yaml  scoring_weights.yaml
configs/: model.yaml  train.yaml
data/: README.md
docs/: 404.html  4component_map.html  PROJECT_STRUCTURE.md  QUICKSTART.md  _config.yml  esri_export.md  evaluation_results.md  findings_summary.docx  findings_summary.md  form_submission.md  index.html  methodology.md  roadsense_map.html  roadsense_scores.geojson  roadsense_scores_map.html  score_interpretation.md  speed_safety_scores.geojson  speed_safety_scores_map.html
notebooks/: 01_data_exploration.ipynb  01_explainability.ipynb  02_evaluation.ipynb  02_preprocessing.ipynb  03_eda.ipynb  03_module_a_speed.ipynb  04_module_b_vru.ipynb  05_module_c_imagery.ipynb  06_speed_safety_score.ipynb  07_evaluation.ipynb  08_visualisation.ipynb
outputs/: network_kpis.csv  roadsense_scores.csv  roadsense_scores.geojson  roadsense_scores_evaluation.json  roadsense_scores_map.html  speed_safety_scores.csv  speed_safety_scores.geojson  speed_safety_scores_evaluation.json  speed_safety_scores_kpis.csv  speed_safety_scores_map.html
reports/: baseline_comparison.csv  baseline_comparison.html  baseline_feature_importance.csv  (+8 more)
(+58 files in other folders)
